tests/reference/asr-matrix_matmul_03-a99cdd1.stderr
semantic error: The `matmul` intrinsic doesn't handle logical type yet
 --> tests/errors/matrix_matmul_03.f90:5:14
  |
5 |     print *, matmul(a, b)
  |              ^^^^^^^^^^^^ 
